Fixed layout spacing

--- a/style.css
+++ b/style.css
@@ -176,8 +176,8 @@ body::before {
 }
 
 #img-portal {
-    width: 300px;
-    height: 300px;
+    width: 500px;
+    height: 500px;
     max-width: 80%;
     z-index: 1;
     object-fit: contain;
@@ -224,7 +224,7 @@ body::before {
     position: relative;
     padding: 0px;
     overflow: visible;
-    gap: 0px;
+    gap: -90px;
 }
 
 .biome {
@@ -236,11 +236,12 @@ body::before {
     text-align: center;
     padding: 20px 0px;
     gap: 20px;
+    margin: 0 -30px;
 }
 
 .floating-island {
-    width: 840px;
-    height: 800px;
+    width: 1150px;
+    height: 840px;
     max-width: 100%;
     animation: float 4s ease-in-out infinite;
     object-fit: contain;
@@ -320,10 +321,11 @@ body::before {
 #rift {
     display: flex;
     flex-direction: column;
-    flex: 0.8;
+    flex: 0.6;
     align-items: center;
     justify-content: center;
-    padding: 20px;
+    padding: 0px;
+    margin: 0 -30px;
     text-align: center;
     z-index: 10;
     gap: 20px;
@@ -352,11 +354,7 @@ body::before {
     align-items: center;
     text-align: center;
     padding: 60px 40px;
-    background: linear-gradient(180deg,
-    rgba(139,0,0,0.3),
-    rgba(0,0,0,0.8),
-    rgba(0,119,182,0.3)
-    );
+   
 }
 
 #synthesis .section-content h2 {
